add support in cli
