# together-sandbox-python/together_sandbox/api/models/inbound_rule_access.py
@@ -1,0 +1,10 @@
+from enum import Enum
+
+
+class InboundRuleAccess(str, Enum):
+    ALLOW = "allow"
+    ALLOW_WITH_TOKEN = "allow_with_token"
+    DENY = "deny"
+
+    def __str__(self) -> str:
+        return str(self.value)
